--- a/DP_EXP_1ipynb.ipynb
+++ b/DP_EXP_1ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcUG0fQ83qBricSn9ienxl",
+      "authorship_tag": "ABX9TyPtQaorI+lwmUwws4wR7F6D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "bSalfvgStI6j",
-        "outputId": "98bfd5dd-484d-4186-af4b-6cbae047a6bf"
+        "outputId": "3eaae127-8d00-42d3-d7b9-c46b526009ea"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Swathi\n",
-            "9822005011\n",
+            "Bindhusha\n",
+            "9921005004\n",
             "Total time spanning: 2.0 days\n",
             "0.173 % of all transactions are fraud. \n"
           ]
@@ -52,7 +52,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-46-8683256ed051>:24: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:24: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -63,7 +63,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==1], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:25: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:25: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -74,7 +74,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==0], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:24: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:24: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -85,7 +85,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==1], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:25: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:25: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -96,7 +96,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==0], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:24: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:24: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -107,7 +107,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==1], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:25: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:25: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -118,7 +118,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==0], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:24: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:24: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -129,7 +129,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==1], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:25: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:25: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -140,7 +140,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==0], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:24: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:24: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -151,7 +151,7 @@
             "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
             "\n",
             "  sns.distplot(df[cn][df.Class ==1], bins=50)\n",
-            "<ipython-input-46-8683256ed051>:25: UserWarning: \n",
+            "<ipython-input-13-490b98e22a54>:25: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -178,14 +178,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Swathi\n",
-            "9822005011\n"
+            "Bindhusha\n",
+            "9822005004\n"
           ]
         }
       ],
       "source": [
-        "print(\"Swathi\")\n",
-        "print(\"9822005011\")\n",
+        "print(\"Bindhusha\")\n",
+        "print(\"9921005004\")\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
@@ -212,9 +212,37 @@
         "    ax.set_xlabel('')\n",
         "    ax.set_title('histogram of feature: '+ str(cn))\n",
         "plt.show()\n",
-        "print(\"Swathi\")\n",
-        "print(\"9822005011\")"
+        "print(\"Bindhusha\")\n",
+        "print(\"9822005004\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "cqrn8fXWht59"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wZ9PQDMLhuSX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "a0vzoJWGfPFj"
+      },
+      "execution_count": 11,
+      "outputs": []
     }
   ]
 }
